# rp2350-dvi

./: CMakeLists.txt  README.md  main.c  main_old.c  nature.h
doc/: HDMI_pinout.txt  PROTOCOL.md  convert_font.py  img2rgb332.py  pixel_image_converter.py  pixels.txt
fw/: CMakeLists.txt  dvi.c  dvi.h  gui.c  gui.h  main.c  main_old.c  nature_rgb332.h  uart_rx.c  uart_rx.h  volz.h
fw/generated_fonts/: fonts.h  vga_font_32.h  vga_font_48.h  vga_font_64.h
power/: CMakeLists.txt  build.bat  main.c
